Commit fixes broken css div, change from div to article in stylesheet

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -70,7 +70,7 @@ header h1 {
 }
 
 /* Attribute Selector for images containing hook */
-div.content img {
+article.content img {
     max-height: 200px;
 }
 
